--- a/Films/Views/Authentication/Login.cshtml
+++ b/Films/Views/Authentication/Login.cshtml
@@ -1,27 +1,64 @@
-﻿@using Films.Models.ViewModels
-@model LoginViewModel
+﻿@using Microsoft.AspNetCore.Mvc.TagHelpers
+@model Films.Models.ViewModels.LoginViewModel
+@{
+    Layout = null;
+    <link rel="stylesheet" href="~/css/login.css" />
+}
 
-<h1>Login</h1>
-<form asp-action="Login" method="post" asp-antiforgery="true">
-	<div class="form-group">
-		<label asp-for="Username"></label>
-		<input asp-for="Username" class="form-control" />
-		<span asp-validation-for="Username" class="text-danger"></span>
-	</div>
-	<div class="form-group">
-		<label asp-for="Password"></label>
-		<input asp-for="Password" type="password" class="form-control" />
-		<span asp-validation-for="Password" class="text-danger"></span>
-	</div>
+<div class="auth-container">
+    <div class="auth-left">
+        <img src="~/images/moviesImage.png" alt="Movie Photo" />
+    </div>
 
-	<div asp-validation-summary="All" class="text-danger"></div>
+    <div class="auth-right">
+        <h2 >Login</h2>
+        <form asp-action="Login" method="post">
+            @Html.AntiForgeryToken()
+            <div class="form-group">
+                <label>Email</label>
+                <input asp-for="Email" class="form-control" />
+                <span asp-validation-for="Email" class="text-danger"></span>
+            </div>
+            <div class="form-group">
+                <label>Contraseña</label>
+                <input asp-for="Password" type="password" class="form-control" />
+                <span asp-validation-for="Password" class="text-danger"></span>
+            </div>
+            <button type="submit" class="btn-submit">Login</button>
+        </form>
+        <p>No tienes una cuenta? <a asp-action="SignUp">Crear una cuenta</a></p>
+    </div>
+</div>
 
-	<button type="submit" class="btn btn-primary">Login</button>
+<!-- Library SweetAlert2 -->
+<script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
+<!-- Success Login Popup -->
+@if (ViewBag.SignUpSuccess != null)
+{
+    <script>
+        Swal.fire({
+            icon: 'success',
+            title: '¡Cuenta creada!',
+            text: '@Html.Raw(@ViewBag.SignUpSuccess)',
+            showConfirmButton: false,
+            timer: 2000
+        });
+    </script>
+}
+<!-- Error popup when the user try to login without an account -->
+@if (ViewBag.LoginError != null)
+{
+    <script>
+        Swal.fire({
+            icon: 'error',
+            title: 'Error',
+            text: '@Html.Raw(@ViewBag.LoginError)',
+            showConfirmButton: false,
+            timer: 2000
+        });
+    </script>
+}
 
-	<div class="mt-3 text-center">
-		<p>
-			¿No tienes una cuenta?
-			<a asp-controller="Authentication" asp-action="SignUP" class="btn btn-secondary ml-2">Crear cuenta</a>
-		</p>
-	</div>
-</form>
+}
+
+
