--- a/Films/Views/Authentication/SignUP.cshtml
+++ b/Films/Views/Authentication/SignUP.cshtml
@@ -1,37 +1,79 @@
-﻿@using Films.Models.ViewModels
-@model SignUpViewModel
+﻿@using Microsoft.AspNetCore.Mvc.TagHelpers
+@model Films.Models.ViewModels.SignUpViewModel
 @{
-    ViewData["Title"] = "Sign Up";
+    Layout = null;
+    <link rel="stylesheet" href="~/css/login.css" />
 }
 
-<div class="signup-container">
-    <div class="signup-title">
-        <h2>Sign Up</h2>
+<div class="auth-container">
+    <div class="auth-left">
+        <img src="~/images/moviesImage.png" alt="Movie Image" />
     </div>
-    <form asp-action="SignUp" method="post" asp-antiforgery="true">
-        <div class="form-group">
-            <label asp-for="UserName" class="form-label"></label>
-            <input asp-for="UserName" class="form-control" />
-            <span asp-validation-for="UserName" class="text-danger"></span>
-        </div>
-        <div class="form-group">
-            <label asp-for="Password" class="form-label"></label>
-            <input asp-for="Password" type="password" class="form-control" />
-            <span asp-validation-for="Password" class="text-danger"></span>
-        </div>
-        <div class="form-group">
-            <label asp-for="ConfirmPassword" class="form-label"></label>
-            <input asp-for="ConfirmPassword" type="password" class="form-control" />
-            <span asp-validation-for="ConfirmPassword" class="text-danger"></span>
-        </div>
 
-        <div asp-validation-summary="All" class="text-danger mb-3"></div>
-        <button type="submit" class="btn btn-primary btn-block">Register</button>
-        <div class="mt-3 text-center">
-            <p>
-                ¿Ya tienes una cuenta?
-                <a asp-controller="Authentication" asp-action="Login" class="btn btn-secondary ml-2">Iniciar Sesión</a>
-            </p>
-        </div>
-    </form>
+    <div class="auth-right">
+        <h2>Crea tu cuenta</h2>
+        <form asp-action="SignUp" method="post" enctype="multipart/form-data">
+            @Html.AntiForgeryToken()
+            <div class="form-group">
+                <label>Nombre de Usuario</label>
+                <input asp-for="UserName" class="form-control" />
+                <span asp-validation-for="UserName" class="text-danger"></span>
+            </div>
+            <div class="form-group">
+                <label>Email</label>
+                <input asp-for="Email" class="form-control" />
+                <span asp-validation-for="Email" class="text-danger"></span>
+            </div>
+            <div class="form-group">
+                <label>Contraseña</label>
+                <input asp-for="Password" type="password" class="form-control" />
+                <span asp-validation-for="Password" class="text-danger"></span>
+            </div>
+            <div class="form-group">
+                <label>Foto de Perfil</label>
+                <input type="file" name="ProfileImage" accept="image/*" class="form-control" />
+            </div>
+            <div class="form-group">
+                <label for="AboutMe">Sobre mí</label>
+                <textarea asp-for="AboutMe" class="form-control textarea-about" rows="4" placeholder="Cuéntanos algo sobre ti para tu perfil..."></textarea>
+                <span asp-validation-for="AboutMe" class="text-danger"></span>
+            </div>
+
+            <button type="submit" class="btn-submit">Registrarse</button>
+        </form>
+        <p>Ya tienes una cuenta? <a asp-action="Login">Log in</a></p>
+    </div>
 </div>
+
+<!-- library SweetAlert2 -->
+<script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
+
+<!-- Success Popup  (when a user create an account) -->
+@if (TempData["SignUpSuccess"] != null)
+{
+    <script>
+        Swal.fire({
+            icon: 'success',
+            title: '¡Cuenta creada!',
+            text: '@Html.Raw(TempData["SignUpSuccess"])',
+            showConfirmButton: false,
+            timer: 2000
+        });
+    </script>
+}
+
+<!-- Error popup when a user try to create an account with an email thar already exists -->
+@if (ViewBag.SignUpError != null)
+{
+    <script>
+        console.log("SignUpError: " + '@ViewBag.SignUpError');
+        Swal.fire({
+            icon: 'error',
+            title: 'Error',
+            text: '@Html.Raw(ViewBag.SignUpError)',
+            showConfirmButton: false,
+            timer: 2000
+        });
+    </script>
+}
+
