--- a/Films/Views/Home/Index.cshtml
+++ b/Films/Views/Home/Index.cshtml
@@ -85,7 +85,38 @@
                         <button type="button" class="btn-close btn-close-white" data-bs-dismiss="modal" aria-label="Cerrar"></button>
                     </div>
                     <div class="modal-body">
-                        Aqui iran los filtros
+                        <div class="gap-2 mt-3">
+                            <form method="post" class="d-flex flex-column" asp-action="AddFilters">
+
+                                <label for="genres" class="mt-2">Género:</label>
+                                <select class="form-select-sm border-radius" name="genres">
+                                    <option value="0">--Elige un filtro--</option>
+                                    @foreach(var genre in Model.Genres) 
+                                    {
+                                        <option value="@genre.Id">@genre.Name</option>
+                                    }
+                                </select>
+
+                                <label for="actors" class="mt-2">Actores:</label>
+                                <select class="form-select-sm border-radius" name="actors">
+                                    <option value="0">--Elige un actor--</option>
+                                    @foreach (var actor in Model.Actors)
+                                    {
+                                        <option value="@actor.Id">@actor.Name</option>
+                                    }
+                                </select>
+
+                                <label for="year" class="mt-2">Año:</label>
+                                <input type="number" class="form-control-sm border-radius" id="year" name="year" min="1900" max="@DateTime.Now.Year" />
+
+                                <label for="duration" class="mt-2">Duración máxima (<output id="durationOutput">120</output> min):</label>
+                                <input type="range" id="duration" name="duration" min="60" max="500" step="10" value="120" class="form-range" oninput="durationOutput.value = duration.value" />
+                                <div class="d-flex justify-content-center gap-2 mt-3">
+                                    <button type="submit" class="btn btn-submit">Aplicar</button>
+                                    <a asp-action="ResetFilters" class="btn btn-submit">Reiniciar</a>
+                                </div>
+                            </form>
+                        </div>
                     </div>
                 </div>
             </div>
