--- a/Films/wwwroot/css/HomeIndex.css
+++ b/Films/wwwroot/css/HomeIndex.css
@@ -1,10 +1,10 @@
+body {
+    background-color: #0E141B;
+}
+
 * {
     margin: 0;
     padding: 0;
-}
-
-body {
-    background-color: #0E141B;
 }
 
 .home-container {
@@ -12,6 +12,7 @@ body {
     margin: 0 auto;
     margin-bottom: 100px;
 }
+
 .movie-scroll-container {
     display: flex;
     overflow-x: auto;
@@ -53,12 +54,13 @@ body {
     transition: background-color 0.2s;
     display: flex;
     align-items: center;
+    z-index: 2;
     justify-content: center;
 }
 
-.movieBtn:hover {
-    background-color: rgba(255, 255, 255, 0.2);
-}
+    .movieBtn:hover {
+        background-color: rgba(255, 255, 255, 0.2);
+    }
 
 .movie-card h3,
 .movie-card p {
@@ -80,9 +82,9 @@ body {
     background-clip: content-box;
 }
 
-.movie-scroll-container::-webkit-scrollbar-thumb:hover {
-    background-color: rgba(255, 255, 255, 0.5);
-}
+    .movie-scroll-container::-webkit-scrollbar-thumb:hover {
+        background-color: rgba(255, 255, 255, 0.5);
+    }
 
 /*Firefox*/
 
@@ -98,9 +100,9 @@ body {
     color: black;
 }
 
-.bg-custom-button:hover {
-    background-color: #e0b423;
-}
+    .bg-custom-button:hover {
+        background-color: #e0b423;
+    }
 
 /*Modal de filtros*/
 
