arreglar margen de footer y navbar

--- a/Films/Views/Shared/_Layout.cshtml
+++ b/Films/Views/Shared/_Layout.cshtml
@@ -14,7 +14,7 @@
 </head>
 <body>
     <header>
-        <nav class="navbar navbar-expand-sm navbar-toggleable-sm navbar-light bg-white border-bottom box-shadow mb-3">
+        <nav class="navbar navbar-expand-sm navbar-toggleable-sm navbar-light bg-white border-bottom box-shadow">
             <div class="container-fluid">
                 <a class="navbar-brand" asp-area="" asp-controller="Home" asp-action="Index">Films</a>
                 <button class="navbar-toggler" type="button"
@@ -72,7 +72,7 @@
         </main>
     </div>
 
-    <footer class="border-top footer text-muted">
+    <footer class="border-top footer text-muted position-relative">
         <div class="container">
             &copy; 2025 - Films - <a asp-area="" asp-controller="Home" asp-action="Privacy">Privacy</a>
         </div>
