--- a/Films/Views/Movies/Detail.cshtml
+++ b/Films/Views/Movies/Detail.cshtml
@@ -8,6 +8,9 @@
 @{
     var currentList = Model.UserMovieLists
         .FirstOrDefault(l => l.FkIdMovie == Model.Id);
+    int type = 0;
+    if(currentList != null)
+        type = currentList.FkIdTypeList; // 1. pendiente, 2. completada, 3. favorita, 4. abandonada
 
     string scoreClass = "low";
     if (Model.Review >= 9)
@@ -46,7 +49,7 @@
                     <div class="movie-actions">
                         <div class="action-wrapper">
                             <form method="post" action="/Home/AddToList">
-                                <button type="submit" class="action-btn" name="listType" value="Pendiente">
+                                <button type="submit" class="action-btn @(type == 1 ? "active" : "")" name="listType" value="Pendiente">
                                     <i class="fa-regular fa-hourglass-half"></i>
                                 </button>
                                 <input type="hidden" name="idFilm" class="idFilm" value="@Model.Id" />
@@ -56,7 +59,7 @@
                         </div>
                         <div class="action-wrapper">
                             <form method="post" action="/Home/AddToList">
-                                <button type="submit" class="action-btn" name="listType" value="Completada">
+                                <button type="submit" class="action-btn @(type == 2 ? "active" : "")" name="listType" value="Completada">
                                     <i class="fa-solid fa-check"></i>
                                 </button>
                                 <input type="hidden" name="idFilm" class="idFilm" value="@Model.Id" />
@@ -67,7 +70,7 @@
                         </div>
                         <div class="action-wrapper">
                             <form method="post" action="/Home/AddToList">
-                                <button class="action-btn" type="submit" name="listType" value="Favorita">
+                                <button class="action-btn @(type == 3 ? "active" : "")" type="submit" name="listType" value="Favorita">
                                     <i class="fa-solid fa-heart"></i>
                                 </button>
                                 <input type="hidden" name="idFilm" class="idFilm" value="@Model.Id" />
@@ -77,7 +80,7 @@
                         </div>
                         <div class="action-wrapper">
                             <form method="post" action="/Home/AddToList">
-                                <button class="action-btn" type="submit" name="listType" value="Abandonada">
+                                <button class="action-btn @(type == 4 ? "active" : "")" type="submit" name="listType" value="Abandonada">
                                     <i class="fa-regular fa-trash-can"></i>
                                 </button>
                                 <span class="tooltip">Abandonada</span>
